<resources>
    <string name="app_name">Echeck</string>
    <string name="app_name_version">Echeck - 1.0.0</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="delete_csca">Delete CSCA Master List</string>
    <string name="doc_dob">Ngày sinh: %1s</string>
    <string name="doc_expiry">Hết hạn: %1s</string>
    <string name="doc_number">Số CCCD: %1s</string>
    <string name="document_chip_content_success">The EID chip and content are valid</string>
    <string name="document_chip_failure">The EID chip is invalid</string>
    <string name="document_content_success">The EID content is valid</string>
    <string name="document_csca_failure">The CSCA information is invalid</string>
    <string name="document_document_failure">The EID chip information is invalid.</string>
    <string name="document_genuinity_failure">The EID is not genuinity.</string>
    <string name="document_cert_failure">The EID certificate is invalid or not in correct format.</string>
    <string name="document_signature_failure">The RAR response is invalid.</string>
    <string name="document_invalid_eid">Invalid eID</string>
    <string name="document_unknown_eid_message">Unable to authenticate the EID</string>
    <string name="document_unknown_eid_title">Unknown EID</string>
    <string name="document_valid_eid">Valid EID</string>
    <string name="download_csca">Tải CSCA Master List</string>
    <string name="error_validation_date">Date format is not valid</string>
    <string name="error_validation_document_number">Document number is not valid</string>
    <string name="keystore_not_empty_message">Do you want to replace the current keystore?</string>
    <string name="keystore_not_empty_title">Keystore</string>
    <string name="label_additional_document_information">Thông tin cá nhân khác</string>
    <string name="label_additional_document_information_date_and_time_of_personalization">Date personalization</string>
    <string name="label_additional_document_information_date_of_issue">Date issue</string>
    <string name="label_additional_document_information_endorsements_and_observations">Observations</string>
    <string name="label_additional_document_information_image_front">Image front</string>
    <string name="label_additional_document_information_image_rear">Image rear</string>
    <string name="label_additional_document_information_issuing_authority">Issuing authority</string>
    <string name="label_additional_document_information_names_of_other_persons">Names of other persons</string>
    <string name="label_additional_document_information_personalization_system_serial_number">System serial number</string>
    <string name="label_additional_document_information_tax_or_exit_requirements">Tax or exit requirements</string>
    <string name="label_additional_information">Thông tin thêm</string>
    <string name="label_additional_information_custody">Giám hộ</string>
    <string name="label_additional_information_dob">Ngày sinh</string>
    <string name="label_additional_information_other_names">Tên khác</string>
    <string name="label_additional_information_other_valid_td_numbers">Other Td numbers</string>
    <string name="label_additional_information_permanent_address">Địa chỉ thường trú</string>
    <string name="label_additional_information_personal_number">Số CCCD</string>
    <string name="label_additional_information_personal_summary">Bản thân</string>
    <string name="label_additional_information_place_of_birth">Quê quán</string>
    <string name="label_additional_information_profession">Nghề nghiệp</string>
    <string name="label_additional_information_telephone">Số điện thoại</string>
    <string name="label_additional_information_title">Danh xưng</string>
    <string name="label_genuinity">Toàn vẹn dữ liệu (A-System Requirements)</string>
    <string name="label_verification">Xác thực</string>
    <string name="label_facematch">Xác thực khuôn mặt</string>
    <string name="label_authentication_document_signed">Document Signed</string>
    <string name="label_authentication_passive">Passive Authentication</string>
    <string name="label_authentication_active">Active Authentication</string>
    <string name="label_authentication_bac">BAC</string>
    <string name="label_authentication_chip">Chip Authentication</string>
    <string name="label_authentication_country_signing">CSCA</string>
    <string name="label_authentication_cert_verification">EID Certifiate Verification</string>
    <string name="label_authentication_kyc">KYC</string>
    <string name="label_authentication_eac">EAC</string>
    <string name="label_authentication_xverify">XVERIFY</string>
    <string name="label_authentication_pace">PACE</string>
    <string name="label_certificate_issuer">Issuer</string>
    <string name="label_certificate_public_key_algorithm">Public key algorithm</string>
    <string name="label_certificate_serial_number">Serial number</string>
    <string name="label_certificate_signature_algorithm">Signature algorithm</string>
    <string name="label_certificate_subject">Subject</string>
    <string name="label_certificate_thumbprint">Certificate thumbprint</string>
    <string name="label_certificate_valid_from">Có hạn từ</string>
    <string name="label_certificate_valid_to">Có hạn tới</string>
    <string name="label_country_signing_certificate">Country Signing Certificate</string>
    <string name="label_document_expiry">Hết hạn</string>
    <string name="label_document_issued">Issuing Date</string>
    <string name="label_document_issuing_state">Nơi cung cấp</string>
    <string name="label_document_nationality">Quốc tịch</string>
    <string name="label_document_number">Số CCCD</string>
    <string name="label_document_signing_certificate">Document Signing Certificate</string>
    <string name="label_not_available">NA</string>
    <string name="label_eid">Thông tin căn cước</string>
    <string name="name">%1s %2s</string>
    <string name="nfc_title">Đặt thiết bị lên thẻ CCCD và không di chuyển</string>
    <string name="nfc_verify">Đang xác thực, vui lòng chờ...</string>
    <string name="please_wait_verifying">Đang xác thực, vui lòng chờ.</string>
    <string name="verify_success">Xác thực thành công</string>
    <string name="verify_failed">Xác thực không thành công</string>
    <string name="eid_invalid">Thẻ CCCD Không hợp lệ</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="prompt_document_date_of_birth">Ngày sinh (yymmdd)</string>
    <string name="prompt_document_expiration">Hết hạn (yymmdd)</string>
    <string name="prompt_document_number">9 số cuối CCCD</string>
    <string name="read_nfc">ĐỌC NFC</string>
    <string name="selection_automatic">Tự động (SCAN MRZ)</string>
    <string name="selection_manual">Thủ công</string>
    <string name="selection_title">Nhập số liệu</string>
    <string name="status_bar_failure">OCR Read failure - Time required: %1d ms</string>
    <string name="status_bar_ocr">Số CCCCD: %1s Ngày sinh: %2s Hết hạn: %3s</string>
    <string name="status_bar_success">OCR Detected - Time required: %2dms</string>
    <string name="warning_authentication_failed">Authentication has failed! Please try to scan the document again or introduce the data manually.</string>
    <string name="warning_cla_not_supported">Impossible to read the document. EID doesn\'t support CLA .</string>
    <string name="warning_enable_nfc">Cần kích hoạt NFC</string>
    <string name="warning_error_ocr_install">Error Installing &amp; Starting OCR</string>
    <string name="warning_no_nfc">Không có NFC trên thiết bị này</string>
    <string name="warning_ocr_install">Installing &amp; Starting OCR</string>
    <string name="warning_ocr_install_progress">Installation OCR: %1d%%</string>
    <string name="national_person_information">Thông tin thêm</string>
    <string name="citizen_id">Số CCCD</string>
    <string name="full_name">Họ và tên</string>
    <string name="dob">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="nationality">Quốc tịch</string>
    <string name="ethnicity">Dân tộc</string>
    <string name="religion">Tôn giáo</string>
    <string name="place_of_origin">Quê quán</string>
    <string name="place_of_residence">Thường trú</string>
    <string name="age">Tuổi</string>
    <string name="date_of_issue">Ngày cấp</string>
    <string name="date_of_expiry">Có giá trị đến</string>
    <string name="personal_identification">Đặc điểm nhận dạng</string>
    <string name="issue_date">Ngày cấp</string>
    <string name="expiry_date">Có giá trị đến</string>
    <string name="father_name">Tên bố</string>
    <string name="mother_name">Tên mẹ</string>
    <string name="spouse_name">Tên vợ/chồng</string>
    <string name="old_id_card">Số CMND</string>
    <string name="unk_id_number">UNK ID Number</string>
    <string name="unk_info">UNK Info</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="put_your_face_in_the_frame">Giữ điện thoại cố định, đặt khuôn mặt của bạn vào khung hình và nhìn thẳng về phía trước.</string>
    <string name="please_look_straight">Vui lòng nhìn thẳng</string>
    <string name="please_tilt_your_face_to_the_left">Vui lòng nhìn sang trái</string>
    <string name="please_tilt_your_face_to_the_right">Vui lòng nhìn sang phải</string>
    <string name="please_open_your_mouth">Vui lòng mở miệng</string>
    <string name="please_smile">Vui lòng cườii</string>
    <string name="please_sadness">Please have a sad expression</string>
    <string name="please_surprised">Please show a surprised expression</string>
    <string name="multi_face">Có nhiều khuôn mặt trong khung hình</string>
    <string name="completed">Hoàn Thành</string>
    <string name="eid_face">Khuôn mặt</string>
    <string name="service_message_code_failed">\"Request failed with code \"</string>
    <string name="service_message_no_data_available">No data available.</string>
    <string name="service_message_please_wait">Please wait…</string>
    <string name="service_message_connection_error">Please check internet connection</string>
    <string name="service_message_success">Success</string>
    <string name="service_message_error">Error</string>
    <string name="service_message_something_wrong">Something went wrong!</string>
    <string name="service_message_unauthorized">Unauthorized, Token session is invalid</string>
    <string name="service_message_body_empty">Content is empty</string>
    <string name="service_message_invalid_object">Object is invalid</string>
    <string name="error_object_invalid">Object is invalid.</string>
    <string name="verify_failed_description_face">Xác thực không thành công! Vui lòng xác nhận lại. Đặt khuôn mặt của bạn vào khung hình và làm theo hướng dẫn xác minh.</string>
    <string name="step_1_scan_mrz">Bước 1: Quét mã MRZ</string>
    <string name="step_2_scan_nfc">Bước 2: Đọc NFC</string>
    <string name="step_3_scan_nfc">Bước 3: Phát hiện người thật</string>
    <string name="step_3_verify_face" translatable="false">Bước 3: Xác Thực Khuôn Mặt</string>
    <string name="please_go_to_setting_and_allow_permission">Vui lòng vào Cài đặt và cấp quyền cho ứng dụng</string>
    <string name="placeholder_title" translatable="false">Lorem ipsum title</string>
    <string name="placeholder_description" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="contract_eid_verified">Chúc mừng bạn đã hoàn tất xác thực.\nBấm nút TIẾP TỤC để ký số</string>
    <string name="button_title_continue">Tiếp tục</string>
    <string name="empty_na">Không có dữ liệu</string>
    <string name="cancel">Hủy</string>
    <string name="image_original">Ảnh gốc</string>
    <string name="image_face_live">Hiện tại</string>
</resources>