<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:dividerHeight="0.0px"
    android:gravity="center_vertical"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_3sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <!-- Title Text View -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:text="@string/placeholder_title"
            android:gravity="center_horizontal"
            style="@style/Text.Title"/>

        <!-- Description -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/placeholder_description"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            style="@style/Text.Body" />

        <!-- Action -->
        <LinearLayout
            android:id="@+id/ll_save_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/white"
                style="@style/Text.Body" />
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:text="OK"
                android:textAllCaps="true"
                android:textColor="@color/white"
                style="@style/Text.Body" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
