<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient_dark">
    <!-- Header -->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        style="@style/Text.Title"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/verify_success"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/tv_success" />
    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_240sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_success"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/mcv_face_match"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_5sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_95sdp"
                android:id="@+id/iv_original"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_110sdp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rounded"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_face_live"
                android:scaleType="centerCrop" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Title"
                android:text="@string/image_original"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/iv_original"
                app:layout_constraintStart_toStartOf="@id/iv_original"
                app:layout_constraintEnd_toEndOf="@id/iv_original"
                android:textColor="@color/colorPrimary"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_95sdp"
                android:id="@+id/iv_face_live"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_110sdp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_original"
                android:scaleType="centerCrop" />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Title"
                android:text="@string/image_face_live"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/iv_face_live"
                app:layout_constraintStart_toStartOf="@id/iv_face_live"
                app:layout_constraintEnd_toEndOf="@id/iv_face_live"/>
            <com.airbnb.lottie.LottieAnimationView
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/lav_animation_success"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:lottie_rawRes="@raw/anim_success"
                app:lottie_progress="90"
                app:lottie_loop="false"
                app:lottie_autoPlay="true"/>
            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/lav_animation_loading"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_65sdp"
                app:lottie_rawRes="@raw/anim_loading_2"
                android:scaleType="centerCrop"
                app:lottie_progress="90"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:visibility="gone"
                tools:visibility="visible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_face_match"
        android:id="@+id/card_view_national_private_information"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/margin_small"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_5sdp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:stretchColumns="1">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small">
                    <TextView
                        android:textSize="@dimen/_13sdp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/google_sans_medium"
                        android:id="@+id/label_pod_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/margin_tiny"
                        android:text="@string/personal_info"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
                </TableRow>
            </TableLayout>

            <TableRow
                android:id="@+id/row_pod_eid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small">
                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/label_pod_eid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="end"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/label_document_number" />
                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/value_pod_eid"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/empty_na"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </TableRow>
            <TableRow
                android:id="@+id/row_pod_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small">
                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/label_pod_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="end"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/full_name" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/value_pod_fullname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/empty_na"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </TableRow>
            <TableRow
                android:id="@+id/row_pod_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small">

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/label_pod_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="end"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/dob" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/value_pod_dob"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/empty_na"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </TableRow>
            <TableRow
                android:id="@+id/row_pod_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small">

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/label_pod_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="end"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/gender" />

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans_medium"
                    android:id="@+id/value_pod_gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:padding="@dimen/margin_tiny"
                    android:text="@string/empty_na"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </TableRow>
        </TableLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Text.Title"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_view_national_private_information"
        android:text="@string/contract_eid_verified"
        android:textSize="@dimen/_13sdp"
        android:id="@+id/tv_description"/>
    <Button
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btn_verify_completed"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/success"
        android:textAllCaps="true"
        android:fontFamily="@font/google_sans_medium"
        android:textStyle="bold"
        android:text="@string/button_title_continue" />
</androidx.constraintlayout.widget.ConstraintLayout>